# brainrust

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: llvm_runner.rs  main.rs  optimizer.rs  parser.rs  runner.rs  structs.rs
test_cases/: incomplete.bf  stray.bf
