[package]
name = 'brain_rust'
version = '0.0.1'
authors = ['Michael Gruenewald <mail@michaelgruenewald.eu>']
license = 'Apache-2.0'

edition = '2021'

[features]
default = ['llvm']
llvm = ['inkwell']

[dependencies]
clap = '4.0'

[dependencies.inkwell]
version = '0.4.0'
optional = true
features = ['llvm15-0']
