[package]
name = 'brain_rust'
version = '0.0.1'
authors = ['Michael Gruenewald <mail@michaelgruenewald.eu>']
license = 'Apache-2.0'

edition = '2021'

[features]
default = ['llvm']
llvm = ['inkwell']

[dependencies]
clap = { version = '4.0' }
inkwell = { version = '0.5.0', optional = true, features = ['llvm18-0'] }
